--- a/style.css
+++ b/style.css
@@ -1,69 +1,190 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
+@charset "UTF-8";
 body{
     position: relative;
-    background-color: #2026B1;
-    color: white;
+    background-image: url("images/wallpaper.jpg");
     overflow-y: hidden;
-    overflow-x: hidden;
+    margin: 0px 5px;
+    padding: 0;
     
 }
-
-a{
+.wrapper{
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+/* navbar mobile */
+nav {
+    width: 100%;
+}
+nav li{
+    display: inline-block;
+    text-align: center;
+    padding: 8px;
+}
+nav a{
     text-decoration: none;
     color: white;
     font-family: 'Brush Script MT', cursive;
+    font-size: 1.45em;
 }
 
-nav{
-  text-align: center;
-  margin: 0;
-  padding: 0;
-}
-
-nav li{
-    display: inline-block;
-  font-size: 20px;
-  padding: 20px;
-}
-
-h1{
-    text-align: center;
-    font-family: 'Brush Script MT', cursive;
-}
-
-.front-page{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-
-}
-
-.bit{
-    background-color: rgb(110, 124, 250);
-    border-style: solid grey;
-    padding: 18px 18px 18px 18px;
-    border-radius: 5px;
-}
-
-.urls{
-    color: rgb(255, 131, 131);
-}
-
+/* front page */
 .pic-logo{
     width: 25px;
 }
 
-.flex-bit{
+.titleflex{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
+}
+ .w:hover{
+     color: red;
+ }
+ .ee:hover{
+    color: orange;
+}
+.l:hover{
+    color: yellow;
+}
+.c:hover{
+    color: rgb(8, 247, 8);
+}
+.o:hover{
+    color: rgb(52, 204, 255);
+}
+.m:hover{
+    color: blue;
+}
+.e:hover{
+    color: purple;
 }
 
-.front-page{
-   margin-top: 10%;
+
+
+/* mobile */
+
+@media only screen and (min-width: 992px){
+    * {
+        box-sizing: border-box;
+       
+    }
+    body{
+        position: relative;
+        background-image: url("images/wallpaper.jpg");
+        color: white;
+        overflow-y: hidden;
+        overflow-x: hidden;
+        margin: 0;
+        padding: 0;
+        
+    }
+    /* navbar */
+    a{
+        text-decoration: none;
+        color: white;
+        font-family: 'Brush Script MT', cursive;
+    }
+    a:hover{
+        color: #842dd4;
+    }
+    
+    nav{
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    
+    nav li{
+      display: inline-block;
+      font-size: 20px;
+      padding: 20px;
+    }
+    
+    /* frontpage */
+    
+    h1{
+        font-family: 'Brush Script MT', cursive;
+    }
+    
+    .front-page{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    
+    }
+    
+    .bit{
+        background-color: #9A6800;
+        border-style: solid grey;
+        padding: 18px 18px 18px 18px;
+        border-radius: 5px;
+    }
+    
+    .bit:hover{
+        box-shadow: 0px 0px 15px #8d6818;
+    }
+    
+    .urls{
+        color: rgb(255, 131, 131);
+    }
+    
+    .pic-logo{
+        width: 25px;
+    }
+    
+    .flex-bit{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .front-page{
+       margin-top: 5%;
+    }
+    
+    
+    /* title */
+    .page-title{
+        margin-top: 5%;
+        font-size: 2.5em;
+    }
+    .titleflex{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+     .w:hover{
+         color: red;
+     }
+     .ee:hover{
+        color: orange;
+    }
+    .l:hover{
+        color: yellow;
+    }
+    .c:hover{
+        color: rgb(8, 247, 8);
+    }
+    .o:hover{
+        color: rgb(52, 204, 255);
+    }
+    .m:hover{
+        color: blue;
+    }
+    .e:hover{
+        color: purple;
+    }
+    
+    /* footer */
+    .footer-crumbs{
+     position: fixed;
+      bottom: 0;
+      width: 100%;
+      height: 2.5rem;    
+      padding-left: 1%;
+    }
+    
+   
+
+
 }
