--- a/style.css
+++ b/style.css
@@ -5,33 +5,41 @@ body{
     overflow-y: hidden;
     margin: 0px 5px;
     padding: 0;
-    
+    margin: 0;
+    width: auto;
+    height: auto;
 }
 .wrapper{
-    overflow-x: hidden;
-    overflow-y: hidden;
+  overflow: hidden;
+   
 }
 /* navbar mobile */
 nav {
     width: 100%;
+    background-color: #9A6800;
 }
 nav li{
-    display: inline-block;
-    text-align: center;
-    padding: 8px;
+    display: flex;
+    flex-direction: column; 
 }
 nav a{
     text-decoration: none;
     color: white;
-    font-family: 'Brush Script MT', cursive;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.45em;
 }
-
+nav li a{
+    display: flex;
+    justify-content: center;
+}
+ul{
+    margin: 0;
+    padding: 0;
+}
 /* front page */
 .pic-logo{
     width: 25px;
 }
-
 .titleflex{
     display: flex;
     flex-direction: row;
@@ -58,11 +66,19 @@ nav a{
 .e:hover{
     color: purple;
 }
-
-
-
+.flex-bit{
+    display: flex;
+    flex-direction: column;
+}
+.footer-crumbs{
+    position: fixed;
+    bottom: 0;
+    margin: 0;
+    padding: 2%;
+    background-color: #9A6800;
+    width: 100%;
+}
 /* mobile */
-
 @media only screen and (min-width: 992px){
     * {
         box-sizing: border-box;
@@ -72,77 +88,63 @@ nav a{
         position: relative;
         background-image: url("images/wallpaper.jpg");
         color: white;
-        overflow-y: hidden;
-        overflow-x: hidden;
         margin: 0;
         padding: 0;
-        
+        overflow: hidden;
     }
     /* navbar */
     a{
         text-decoration: none;
         color: white;
-        font-family: 'Brush Script MT', cursive;
     }
     a:hover{
         color: #842dd4;
     }
-    
     nav{
       text-align: center;
       margin: 0;
       padding: 0;
     }
-    
+    nav a{
+        font-family: "Lucida Console", "Courier New", monospace;
+    }
     nav li{
       display: inline-block;
       font-size: 20px;
       padding: 20px;
     }
-    
     /* frontpage */
-    
     h1{
         font-family: 'Brush Script MT', cursive;
     }
-    
     .front-page{
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         flex-wrap: wrap;
-    
     }
-    
     .bit{
         background-color: #9A6800;
         border-style: solid grey;
         padding: 18px 18px 18px 18px;
         border-radius: 5px;
     }
-    
     .bit:hover{
         box-shadow: 0px 0px 15px #8d6818;
     }
-    
     .urls{
         color: rgb(255, 131, 131);
     }
-    
     .pic-logo{
         width: 25px;
     }
-    
     .flex-bit{
         display: flex;
         flex-direction: column;
     }
-    
     .front-page{
        margin-top: 5%;
     }
-    
-    
     /* title */
     .page-title{
         margin-top: 5%;
@@ -152,11 +154,12 @@ nav a{
         display: flex;
         flex-direction: row;
         justify-content: center;
+        font-family: "Lucida Console", "Courier New", monospace;
     }
-     .w:hover{
+    .w:hover{
          color: red;
-     }
-     .ee:hover{
+    }
+    .ee:hover{
         color: orange;
     }
     .l:hover{
@@ -174,17 +177,11 @@ nav a{
     .e:hover{
         color: purple;
     }
-    
     /* footer */
     .footer-crumbs{
      position: fixed;
       bottom: 0;
       width: 100%;
-      height: 2.5rem;    
-      padding-left: 1%;
+      height: 2.5rem;     
     }
-    
-   
-
-
 }
